--- a/angular.json
+++ b/angular.json
@@ -33,6 +33,7 @@
             ],
             "styles": [
               "node_modules/bootstrap/dist/css/bootstrap.min.css",
+              "node_modules/@fortawesome/fontawesome-free/css/all.min.css",
               "node_modules/ngx-spinner/animations/ball-atom.css",
               "src/styles.scss"
             ],
