--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "@angular/router": "^18.2.0",
     "@fortawesome/fontawesome-free": "^6.6.0",
     "bootstrap": "^5.3.3",
+    "highcharts": "^11.4.8",
+    "highcharts-angular": "^4.0.1",
     "ngx-pagination": "^6.0.3",
     "ngx-spinner": "^17.0.0",
     "ngx-toastr": "^19.0.0",
